2009-03-12  Janne Jalkanen <jalkanen@apache.org>

        * 3.0.0-svn-82
        
        * Fixed issue in ContentManager.getPage() not properly
        catching exceptions.

2009-02-22  Andrew Jaquith <ajaquith AT apache DOT org>

        * 3.0.0-svn-81
        
        * Checked in Stripsified Edit.jsp. Spam detection does NOT
        work yet. Attachment uploading now supports up to 5 uploads
        courtesy of Stripes. AttachmentServlet's days are
        numbered. Merged Janne's JCR checkins into my new code; some
        inconsistencies still need to be ironed out. "Sneak preview"
        has hereby been renamed "live preview".

2009-03-06  Janne Jalkanen <jalkanen@apache.org>

        * 3.0.0-svn-80
        
        * JSPWIKI-421 Migrated AttachmentManager to use ContentManager.
        
        * Attachment is now an interface
        
        * Commented out quite a lot of test code which was directly
        instantiating Attachment - these needs to be fixed.
        
        * Removed BasicAttachmentProvider and CachingAttachmentProvider.
        
2009-03-04  Janne Jalkanen <jalkanen@apache.org>

        * 3.0.0-svn-79
        
        * Removed most PageProviders and related tests as obsolete.

2009-03-04  Janne Jalkanen <jalkanen@apache.org>

        * 3.0.0-svn-78
        
        * JSPWIKI-421: First commit. PageManager removed from use;
        AttachmentManager not yet migrated.

2009-03-03  Harry Metske <metskem@apache.org>

        * 3.0.0-svn-77
        
        * Get rid of all javadoc warnings
        
        * added  forkmode="once" maxmemory="512m" to build.xml's tests target
        
2009-03-02  Harry Metske <metskem@apache.org>

        * 3.0.0-svn-76
        
        * JSPWIKI-513 Remove DAV support
        
2009-02-27  Harry Metske <metskem@apache.org>

        * 3.0.0-svn-75
        
        * JSPWIKI-414 - denounce plugin localized, the denouncetext is now in PluginResources.properties
        